# data-model

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod
.github/workflows/: main.yml
api/: BUILD.bazel  README.md
api/common/grpc/: BUILD.bazel  service.proto
api/common/pb/: BUILD.bazel  model.proto
api/customer/grpc/: BUILD.bazel  service.proto
api/customer/pb/: BUILD.bazel  model.proto
api/enterprise/grpc/: BUILD.bazel  service.proto
api/enterprise/pb/: BUILD.bazel  model.proto
api/enums/climate/pb/: BUILD.bazel  climate.proto
api/enums/communication/pb/: BUILD.bazel  communication.proto
api/enums/country/pb/: BUILD.bazel  country.proto
api/enums/currency/pb/: BUILD.bazel  currency.proto
api/enums/geo/pb/: BUILD.bazel  geo.proto
api/enums/lang/pb/: BUILD.bazel  lang.proto
api/enums/locale/pb/: BUILD.bazel  locale.proto
api/enums/party/pb/: BUILD.bazel  party.proto
api/enums/paryment/pb/: payment.proto
api/enums/payment/pb/: BUILD.bazel  payment.proto
api/enums/timezone/pb/: BUILD.bazel  time_zone.proto
api/enums/uom/pb/: BUILD.bazel  uom.proto
api/events/grpc/: BUILD.bazel  service.proto
api/events/pb/: BUILD.bazel  model.proto
api/inventory/control/grpc/: BUILD.bazel  inventory_control_service.proto  service.proto
api/inventory/control/pb/: BUILD.bazel  inventory_control.proto  model.proto
api/inventory/fact/grpc/: BUILD.bazel  inventory_fact_service.proto
api/inventory/fact/pb/: BUILD.bazel  inventory_fact.proto
api/inventory/facts/grpc/: BUILD.bazel  service.proto
api/inventory/facts/pb/: BUILD.bazel  model.proto
api/location/grpc/: BUILD.bazel  service.proto
api/location/pb/: BUILD.bazel  model.proto
api/merchandise/grpc/: BUILD.bazel  service.proto
api/merchandise/pb/: BUILD.bazel  category.proto  model.proto
api/party/pb/: BUILD.bazel  model.proto
api/payments/grpc/: BUILD.bazel  service.proto
api/payments/pb/: BUILD.bazel  model.proto
api/promotions/grpc/: BUILD.bazel  service.proto
api/promotions/pb/: BUILD.bazel  model.proto
docs/: BUILD  configRelearn.toml
docs/config/_default/: params.yaml
docs/content/en/use/go/: _index.md
docs/data/menu/: extra.yaml  more.yaml
sdk/go/: BUILD.bazel
sdk/java/: BUILD.bazel
sdk/python/: BUILD.bazel
