module(
    name = "retail_data_model",
    version = "0.1.0",
    compatibility_level = 1,
)

# --- Base & Language Rules ---
bazel_dep(name = "bazel_skylib", version = "1.8.0")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.3.1")
bazel_dep(name = "rules_proto_grpc_doc", version = "5.3.1")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "googleapis", version = "0.0.0-20250604-de157ca3")
bazel_dep(name = "grpc", version = "1.73.1")
bazel_dep(name = "gazelle", version = "0.44.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protoc-gen-bq-schema", version = "0.0.0")
git_override(
    module_name = "protoc-gen-bq-schema",
    commit = "ae2372691c7f9c9680d33c25aa849d41948552ae",
    remote = "https://github.com/rrmcguinness/protoc-gen-bq-schema-fork.git",
)

################################################################################
# Go Lang Setup
################################################################################
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.24.4")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
