module(
    name = "retail_data_model",
    version = "0.1.0",
    compatibility_level = 1,
)

# --- Base & Language Rules ---
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "rules_java", version = "8.13.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.3.1")
bazel_dep(name = "rules_proto_grpc_doc", version = "5.3.1")
bazel_dep(name = "rules_proto_grpc_go", version = "5.3.1")
bazel_dep(name = "rules_proto_grpc_java", version = "5.3.1")
bazel_dep(name = "rules_proto_grpc_python", version = "5.3.1")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "googleapis", version = "0.0.0-20250703-f9d6fe4a")
bazel_dep(name = "googleapis-go", version = "1.0.0")
bazel_dep(name = "googleapis-python", version = "1.0.0")
bazel_dep(name = "googleapis-java", version = "1.0.0")
bazel_dep(name = "grpc", version = "1.73.1")
bazel_dep(name = "gazelle", version = "0.44.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protoc-gen-bq-schema", version = "0.0.0")
git_override(
    module_name = "protoc-gen-bq-schema",
    commit = "405dc6036c77e8e9bc12e826f9eb26e3b1257c7d",
    remote = "https://github.com/retail-cortex/protoc-gen-bq-schema.git",
)

bazel_dep(name = "rules_hugo", version = "0.0.0")
git_override(
    module_name = "rules_hugo",
    commit = "fea28c845868318744dfa0b02c29a65fe4bffb8e",
    remote = "https://github.com/retail-cortex/rules-hugo.git",
)

################################################################################
# Go Lang Setup
################################################################################
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.24.4")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

################################################################################
# Hugo Rules
################################################################################

hugo_deps = use_extension("@rules_hugo//hugo:extensions.bzl", "hugo_deps")

# Configure Hugo repository

use_repo(hugo_deps, "hugo", "hugo_theme_geekdoc")
