load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

filegroup(
    name = "api_documents",
    srcs = [
        "//api/common/grpc:api_common_grpc_docs",
        "//api/common/pb:api_common_pb_docs",
        "//api/customer/grpc:api_customer_grpc_docs",
        "//api/customer/pb:api_customer_pb_docs",
        "//api/enterprise/grpc:api_enterprise_grpc_docs",
        "//api/enterprise/pb:api_enterprise_pb_docs",
        "//api/events/grpc:api_events_grpc_docs",
        "//api/events/pb:api_events_pb_docs",
        "//api/inventory/control/grpc:api_inventory_control_grpc_docs",
        "//api/inventory/control/pb:api_inventory_control_pb_docs",
        "//api/inventory/facts/grpc:api_inventory_facts_grpc_docs",
        "//api/inventory/facts/pb:api_inventory_facts_pb_docs",
        "//api/location/grpc:api_location_grpc_docs",
        "//api/location/pb:api_location_pb_docs",
        "//api/merchandise/grpc:api_merchandise_grpc_docs",
        "//api/merchandise/pb:api_merchandise_pb_docs",
        "//api/party/pb:api_party_pb_docs",
        "//api/payments/grpc:api_payments_grpc_docs",
        "//api/payments/pb:api_payments_pb_docs",
        "//api/promotions/grpc:api_promotions_grpc_docs",
        "//api/promotions/pb:api_promotions_pb_docs",
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "api_documents_tar",
    srcs = [
        ":api_documents",
    ],
    extension = ".tgz",
    remap_paths = {
        "/doc_": "",
    },
    visibility = ["//docs:__subpackages__"],
)
