load("@rules_proto_grpc_go//:defs.bzl", "go_grpc_library", "go_proto_library")

go_proto_library(
    name = "climate_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/climate/pb",
    protos = [
        "//api/enums/climate/pb:pb_proto",
    ],
)

go_proto_library(
    name = "communication_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/communication/pb",
    protos = [
        "//api/enums/communication/pb:pb_proto",
    ],
)

go_proto_library(
    name = "country_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/country/pb",
    protos = [
        "//api/enums/country/pb:pb_proto",
    ],
)

go_proto_library(
    name = "currency_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/currency/pb",
    protos = [
        "//api/enums/currency/pb:pb_proto",
    ],
)

go_proto_library(
    name = "geo_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/geo/pb",
    protos = [
        "//api/enums/geo/pb:pb_proto",
    ],
)

go_proto_library(
    name = "lang_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/lang/pb",
    protos = [
        "//api/enums/lang/pb:pb_proto",
    ],
)

go_proto_library(
    name = "locale_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/locale/pb",
    protos = [
        "//api/enums/locale/pb:pb_proto",
    ],
)

go_proto_library(
    name = "party_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/party/pb",
    protos = [
        "//api/enums/party/pb:pb_proto",
    ],
)

go_proto_library(
    name = "payment_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/payment/pb",
    protos = [
        "//api/enums/payment/pb:pb_proto",
    ],
)

go_proto_library(
    name = "timezone_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/timezone/pb",
    protos = [
        "//api/enums/timezone/pb:pb_proto",
    ],
)

go_proto_library(
    name = "uom_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enums/uom/pb",
    protos = [
        "//api/enums/uom/pb:pb_proto",
    ],
)

go_proto_library(
    name = "common_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/common/pb",
    protos = [
        "//api/common/pb:pb_proto",
    ],
    deps = [
        ":currency_go_proto",
        ":locale_go_proto",
        ":uom_go_proto",
        "@protoc-gen-bq-schema//api:protos_go_proto",
    ],
)

go_grpc_library(
    name = "common_go_grpc",
    importpath = "github.com/retail-cortex/data-model/api/common/grpc",
    protos = [
        "//api/common/grpc:grpc_proto",
    ],
    deps = [
        ":common_go_proto",
        "@googleapis//google/api:annotations_go_proto",
    ],
)

go_proto_library(
    name = "customer_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/customer/pb",
    protos = [
        "//api/customer/pb:pb_proto",
    ],
    deps = [
        ":common_go_proto",
        ":currency_go_proto",
        ":lang_go_proto",
        ":party_main_go_proto",
    ],
)

go_grpc_library(
    name = "customer_go_grpc",
    importpath = "github.com/retail-cortex/data-model/api/customer/grpc",
    protos = [
        "//api/customer/grpc:grpc_proto",
    ],
    deps = [
        ":common_go_proto",
        ":customer_go_proto",
        "@googleapis//google/api:annotations_go_proto",
    ],
)

go_proto_library(
    name = "enterprise_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/enterprise/pb",
    protos = [
        "//api/enterprise/pb:pb_proto",
    ],
    deps = [
        ":common_go_proto",
        ":country_go_proto",
        ":currency_go_proto",
        ":lang_go_proto",
        ":party_main_go_proto",
        "@protoc-gen-bq-schema//api:protos_go_proto",
    ],
)

go_grpc_library(
    name = "enterprise_go_grpc",
    importpath = "github.com/retail-cortex/data-model/api/enterprise/grpc",
    protos = [
        "//api/enterprise/grpc:grpc_proto",
    ],
    deps = [
        ":common_go_proto",
        ":enterprise_go_proto",
        "@googleapis//google/api:annotations_go_proto",
    ],
)

go_proto_library(
    name = "events_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/events/pb",
    protos = [
        "//api/events/pb:pb_proto",
    ],
    deps = [
        "@protoc-gen-bq-schema//api:protos_go_proto",
    ],
)

go_grpc_library(
    name = "events_go_grpc",
    importpath = "github.com/retail-cortex/data-model/api/events/grpc",
    protos = [
        "//api/events/grpc:grpc_proto",
    ],
    deps = [
        ":common_go_proto",
        ":events_go_proto",
        "@googleapis//google/api:annotations_go_proto",
    ],
)

go_proto_library(
    name = "inventory_control_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/inventory/control/pb",
    protos = [
        "//api/inventory/control/pb:pb_proto",
    ],
    deps = [
        ":common_go_proto",
        ":currency_go_proto",
        ":uom_go_proto",
    ],
)

go_grpc_library(
    name = "inventory_control_go_grpc",
    importpath = "github.com/retail-cortex/data-model/api/inventory/control/grpc",
    protos = [
        "//api/inventory/control/grpc:grpc_proto",
    ],
    deps = [
        ":common_go_proto",
        ":inventory_control_go_proto",
        "@googleapis//google/api:annotations_go_proto",
    ],
)

go_proto_library(
    name = "inventory_facts_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/inventory/facts/pb",
    protos = [
        "//api/inventory/facts/pb:pb_proto",
    ],
    deps = [
        ":common_go_proto",
        "@protoc-gen-bq-schema//api:protos_go_proto",
    ],
)

go_grpc_library(
    name = "inventory_facts_go_grpc",
    importpath = "github.com/retail-cortex/data-model/api/inventory/facts/grpc",
    protos = [
        "//api/inventory/facts/grpc:grpc_proto",
    ],
    deps = [
        ":common_go_proto",
        ":inventory_facts_go_proto",
        "@googleapis//google/api:annotations_go_proto",
    ],
)

go_proto_library(
    name = "location_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/location/pb",
    protos = [
        "//api/location/pb:pb_proto",
    ],
    deps = [
        ":climate_go_proto",
        ":common_go_proto",
        ":geo_go_proto",
        ":timezone_go_proto",
        ":uom_go_proto",
        "@protoc-gen-bq-schema//api:protos_go_proto",
    ],
)

go_grpc_library(
    name = "location_go_grpc",
    importpath = "github.com/retail-cortex/data-model/api/location/grpc",
    protos = [
        "//api/location/grpc:grpc_proto",
    ],
    deps = [
        ":common_go_proto",
        ":location_go_proto",
        "@googleapis//google/api:annotations_go_proto",
    ],
)

go_proto_library(
    name = "merchandise_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/merchandise/pb",
    protos = [
        "//api/merchandise/pb:pb_proto",
    ],
    deps = [
        ":common_go_proto",
        ":enterprise_go_proto",
        ":locale_go_proto",
        "@protoc-gen-bq-schema//api:protos_go_proto",
    ],
)

go_grpc_library(
    name = "merchandise_go_grpc",
    importpath = "github.com/retail-cortex/data-model/api/merchandise/grpc",
    protos = [
        "//api/merchandise/grpc:grpc_proto",
    ],
    deps = [
        ":common_go_proto",
        ":merchandise_go_proto",
        "@googleapis//google/api:annotations_go_proto",
    ],
)

go_proto_library(
    name = "party_main_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/party/pb",
    protos = [
        "//api/party/pb:pb_proto",
    ],
    deps = [
        ":common_go_proto",
        ":currency_go_proto",
        ":lang_go_proto",
        ":party_go_proto",
    ],
)

go_proto_library(
    name = "payments_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/payments/pb",
    protos = [
        "//api/payments/pb:pb_proto",
    ],
    deps = [
        ":common_go_proto",
        ":country_go_proto",
        ":currency_go_proto",
        ":payment_go_proto",
    ],
)

go_proto_library(
    name = "promotions_go_proto",
    importpath = "github.com/retail-cortex/data-model/api/promotions/pb",
    protos = [
        "//api/promotions/pb:pb_proto",
    ],
)
