load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "pb_proto",
    srcs = ["model.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//api/common/pb:pb_proto",
        "//api/enums/currency/pb:pb_proto",
        "//api/enums/lang/pb:pb_proto",
        "//api/party/pb:pb_proto",
        "@protobuf//:timestamp_proto",
    ],
)
