load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "grpc_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//api/common/pb:pb_proto",
        "//api/enterprise/pb:pb_proto",
        "@googleapis//google/api:annotations_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:field_mask_proto",
        "@protoc-gen-bq-schema//api:bq_schema_proto_lib",
    ],
)
