load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "pb_proto",
    srcs = ["model.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:struct_proto",
        "@protobuf//:timestamp_proto",
        "@protoc-gen-bq-schema//api:bq_schema_proto_lib",
    ],
)
