load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "pb_proto",
    srcs = ["model.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//api/common/pb:pb_proto",
        "//api/enums/climate/pb:pb_proto",
        "//api/enums/geo/pb:pb_proto",
        "//api/enums/timezone/pb:pb_proto",
        "//api/enums/uom/pb:pb_proto",
        "@protobuf//:timestamp_proto",
        "@protoc-gen-bq-schema//api:bq_schema_proto_lib",
    ],
)
